# MyProject

./: CMakeLists.txt
BaseLib/: CMakeLists.txt
BaseLib/include/: BaseFunctions.h
BaseLib/src/: BaseFunctions.cpp  Map_Geometry.cpp
Desktop/: Bot.cpp  Bot.h  Button.cpp  Button.h  ButtonBackGround.cpp  ButtonBackGround.h  CMakeLists.txt  Camera.cpp  Camera.h  CharButton.cpp  CharButton.h  CheckBox.cpp  CheckBox.h  ComboBox.cpp  ComboBox.h  Feed.cpp  Feed.h  Food.cpp  Food.h  GameScene.cpp  GameScene.h  Hero.cpp  Hero.h  HoverButton.cpp  HoverButton.h  KeyBindController.cpp  KeyBindController.h  KeyBindType.h  MainScene.cpp  MainScene.h  MapSegment.h  Message.cpp  Message.h  MoveObject.cpp  MoveObject.h  MyAlgorithms.hpp  Objects.cpp  Objects.h  Options.cpp  Options.h  (+23 more)
Server/: BaseOld.cpp  BaseOld.h  BotServer.cpp  BotServer.h  CMakeLists.txt  Camera.cpp  Camera.h  ClippingAlgorithm.cpp  ClippingAlgorithm.h  Colors.h  Constants.h  FeedServer.cpp  FeedServer.h  FoodServer.cpp  FoodServer.h  GameEngine.cpp  GameEngine.h  Generator.h  HeroServer.cpp  HeroServer.h  IRegistrator.h  JsonSerialize.cpp  JsonSerialize.h  Map.cpp  Map.h  MapSegment.h  MessageServer.cpp  MessageServer.h  MoveObjectServer.cpp  MoveObjectServer.h  ObjectsServer.cpp  ObjectsServer.h  PieceServer.cpp  PieceServer.h  PiecesList.cpp  PiecesList.h  QuadTree.cpp  QuadTree.h  Respawn.cpp  Respawn.h  (+7 more)
tests/: CMakeLists.txt  testLerp.cpp  testRtree.cpp
